# watchng

./: .gitignore  .travis.yml  AUTHORS  Makefile  README.md  README.textile  manual.t2t  pyproject.toml  setup.cfg  setup.py  test_watchng.py  watchng  watchng.1
.github/actions/ghaction-python-stdeb/: Dockerfile  action.yml  entrypoint
.github/workflows/: ci.yml
debian/: README  changelog  control  copyright  rules  watch  watchng.manpages
debian/source/: options
watchng/: __init__.py
