# Copyright (C) 2021 Leandro Lisboa Penz <lpenz@lpenz.org>
# This file is subject to the terms and conditions defined in
# file 'LICENSE', which is part of this source code package.

[metadata]
name = watchng
version = attr: watchng.__version__
description = Run a command periodically, showing output only when it changes
long_description = file: README.md
license = GPLv2+
license_files = LICENSE
author = "Leandro Lisboa Penz"
author_email = "lpenz@lpenz.org"
url = http://github.com/lpenz/watchng
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/watchng
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
share/man/man1 = 
    watchng.1
share/doc/python3-watchng =
    README.md
    LICENSE
    AUTHORS

[options.extras_require]
test =
    pytest
    pytest-cov
    pyftpdlib
